--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
+    "moongose": "^1.0.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.18",
     "pg": "^8.7.3",
